--- a/index.html
+++ b/index.html
@@ -27,316 +27,325 @@
 
                 <a href="index.html"><img src="images/logo.svg"></a></div>
 
+            <div class="profile"><a href="dasomyoon.pdf"><img src="images/resume.svg"><span class="profiletext3">VIEW PORTFOLIO</span><p></p></a></div>
+        </div>
 
-            <div class="profile"><a href="profile.html"><img src="images/profile.svg"></a></div>
+        <div class="container"><div id="img-resize"><img src="images/web.jpg"></div></div>
+
         </div>
 
 
-    </header>
-    <section>
-            <div class="container">
 
-                <div class="box one">
-                    <a href="01.html">
-                        <div class="onehover x-align-middle">
-                            <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> 01 </span></div>
-                                <div><span class="categoryfont">branding </span></div>
-                            </div>
-
-                        </div>
-                    </a>
-                </div>
+        <!--<div class="profile"><a href="profile.html"><img src="images/profile.svg"></a></div>-->
+        <!--</div>-->
 
 
-                <div></div>
+    <!--</header>-->
+    <!--<section>-->
+            <!--<div class="container">-->
+
+                <!--<div class="box one">-->
+                    <!--<a href="01.html">-->
+                        <!--<div class="onehover x-align-middle">-->
+                            <!--<div class="x-align-block text-padding">-->
+                                <!--<div><span class="titlefont"> 01 </span></div>-->
+                                <!--<div><span class="categoryfont">branding </span></div>-->
+                            <!--</div>-->
+
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
 
 
-                <div class="box two">
-                    <a href="02.html">
-                        <div class="twohover x-align-middle">
-                            <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> 02 </span></div>
-                                <div><span class="categoryfont">branding  </span></div>
-                            </div>
-
-                        </div>
-                    </a>
-                </div>
+                <!--<div></div>-->
 
 
-                <div class="box three">
-                    <a href="03.html">
-                        <div class="threehover x-align-middle">
-                            <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> 03 </span></div>
-                                <div><span class="categoryfont">branding </span></div>
-                            </div>
+                <!--<div class="box two">-->
+                    <!--<a href="02.html">-->
+                        <!--<div class="twohover x-align-middle">-->
+                            <!--<div class="x-align-block text-padding">-->
+                                <!--<div><span class="titlefont"> 02 </span></div>-->
+                                <!--<div><span class="categoryfont">branding  </span></div>-->
+                            <!--</div>-->
 
-                        </div>
-                    </a>
-
-                </div>
-
-
-                <div class="box four">
-                    <a href="04.html">
-                        <div class="fourhover x-align-middle">
-                            <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> 04 </span></div>
-                                <div><span class="categoryfont">branding</span></div>
-                            </div>
-
-                        </div>
-                    </a>
-
-                </div>
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
 
 
-                <div class="box five">
-                    <a href="05.html">
-                        <div class="fivehover x-align-middle">
-                            <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> 05 </span></div>
-                                <div><span class="categoryfont">branding</span></div>
-                            </div>
+                <!--<div class="box three">-->
+                    <!--<a href="03.html">-->
+                        <!--<div class="threehover x-align-middle">-->
+                            <!--<div class="x-align-block text-padding">-->
+                                <!--<div><span class="titlefont"> 03 </span></div>-->
+                                <!--<div><span class="categoryfont">branding </span></div>-->
+                            <!--</div>-->
+
+                        <!--</div>-->
+                    <!--</a>-->
+
+                <!--</div>-->
 
 
-                        </div>
-                    </a>
+                <!--<div class="box four">-->
+                    <!--<a href="04.html">-->
+                        <!--<div class="fourhover x-align-middle">-->
+                            <!--<div class="x-align-block text-padding">-->
+                                <!--<div><span class="titlefont"> 04 </span></div>-->
+                                <!--<div><span class="categoryfont">branding</span></div>-->
+                            <!--</div>-->
 
-                </div>
+                        <!--</div>-->
+                    <!--</a>-->
 
-
-                <div class="box six">
-                    <a href="06.html">
-                        <div class="sixhover x-align-middle">
-                            <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> 06 </span></div>
-                                <div><span class="categoryfont">motion graphic</span></div>
-                            </div>
-
-                        </div>
-                    </a>
-                </div>
+                <!--</div>-->
 
 
-                <div class="box seven">
-                    <a href="07.html">
-                        <div class="sevenhover x-align-middle">
-                            <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> 07 </span></div>
-                                <div><span class="categoryfont">motion graphic </span></div>
-                            </div>
-
-                        </div>
-                    </a>
-                </div>
-
-                <div class="box eight">
-                    <a href="index.html">
-                        <div class="eighthover x-align-middle">
-                            <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> 08 </span></div>
-                                <div><span class="categoryfont">motion graphic </span></div>
-                            </div>
-
-                        </div>
-                    </a>
-                </div>
-
-                <div class="box nine">
-                    <a href="index.html">
-                        <div class="ninehover x-align-middle">
-                            <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> 10 </span></div>
-                                <div><span class="categoryfont"> branding </span></div>
-                            </div>
-
-                        </div>
-                    </a>
-                </div>
+                <!--<div class="box five">-->
+                    <!--<a href="05.html">-->
+                        <!--<div class="fivehover x-align-middle">-->
+                            <!--<div class="x-align-block text-padding">-->
+                                <!--<div><span class="titlefont"> 05 </span></div>-->
+                                <!--<div><span class="categoryfont">branding</span></div>-->
+                            <!--</div>-->
 
 
-                <div class="box ten">
-                    <a href="index.html">
-                        <div class="tenhover x-align-middle">
-                            <div class="x-align-block text-padding">
-                                <div><span class="titlefont"> 09 </span></div>
-                                <div><span class="categoryfont"> branding </span></div>
-                            </div>
+                        <!--</div>-->
+                    <!--</a>-->
 
-                        </div>
-                    </a>
-                </div>
+                <!--</div>-->
 
 
-            </div>
+                <!--<div class="box six">-->
+                    <!--<a href="06.html">-->
+                        <!--<div class="sixhover x-align-middle">-->
+                            <!--<div class="x-align-block text-padding">-->
+                                <!--<div><span class="titlefont"> 06 </span></div>-->
+                                <!--<div><span class="categoryfont">motion graphic</span></div>-->
+                            <!--</div>-->
 
-    </section>
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
 
 
-</div>
+                <!--<div class="box seven">-->
+                    <!--<a href="07.html">-->
+                        <!--<div class="sevenhover x-align-middle">-->
+                            <!--<div class="x-align-block text-padding">-->
+                                <!--<div><span class="titlefont"> 07 </span></div>-->
+                                <!--<div><span class="categoryfont">motion graphic </span></div>-->
+                            <!--</div>-->
+
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
+
+                <!--<div class="box eight">-->
+                    <!--<a href="index.html">-->
+                        <!--<div class="eighthover x-align-middle">-->
+                            <!--<div class="x-align-block text-padding">-->
+                                <!--<div><span class="titlefont"> 08 </span></div>-->
+                                <!--<div><span class="categoryfont">motion graphic </span></div>-->
+                            <!--</div>-->
+
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
+
+                <!--<div class="box nine">-->
+                    <!--<a href="index.html">-->
+                        <!--<div class="ninehover x-align-middle">-->
+                            <!--<div class="x-align-block text-padding">-->
+                                <!--<div><span class="titlefont"> 10 </span></div>-->
+                                <!--<div><span class="categoryfont"> branding </span></div>-->
+                            <!--</div>-->
+
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
+
+
+                <!--<div class="box ten">-->
+                    <!--<a href="index.html">-->
+                        <!--<div class="tenhover x-align-middle">-->
+                            <!--<div class="x-align-block text-padding">-->
+                                <!--<div><span class="titlefont"> 09 </span></div>-->
+                                <!--<div><span class="categoryfont"> branding </span></div>-->
+                            <!--</div>-->
+
+                        <!--</div>-->
+                    <!--</a>-->
+                <!--</div>-->
+
+
+            <!--</div>-->
+
+    <!--</section>-->
+
+
+<!--</div>-->
 
 
 <div class="x-mobile">
 
     <header class="major">
         <div class="major2 clearfix">
-            <div class="menu"><a href="index.html"><img src="images/menu2.svg"></a></div>
+            <!--<div class="menu"><a href="index.html"><img src="images/menu2.svg"></a></div>-->
             <div class="logo"><a href="index.html"><img src="images/logo2.svg"></a></div>
-            <div class="profile"><a href="profile.html"><img src="images/profile2.svg"></a></div>
-        </div>
+            <!--<div class="profile"><a href="profile.html"><img src="images/profile2.svg"></a></div>-->
+        <!--</div>-->
 
 
-    </header>
-    <section>
-        <div class="container">
-            <a href="01.html">
-                <div class="box one">
+    <!--</header>-->
+    <!--<section>-->
+            <div class="profile"><a href=“dasomyoon.pdf”><img src="images/resume.svg"><span class="profiletext3">VIEW PORTFOLIO</span><p></p></a></div>
+            <div class="container"><div id="img-resize"><img src="images/web.jpg"></div></div>
+            <!--<a href="01.html">-->
+                <!--<div class="box one">-->
 
-                    <div class="onehover x-align-middle">
-                        <div class="x-align-block text-padding">
+                    <!--<div class="onehover x-align-middle">-->
+                        <!--<div class="x-align-block text-padding">-->
 
-                        </div>
-                    </div>
-                </div>
-            </a>
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
+            <!--</a>-->
 
 
 
 
-            <div></div>
+            <!--<div></div>-->
 
 
-            <a href="02.html">
-                <div class="box two">
-                    <div class="twohover x-align-middle">
-                        <div class="x-align-block text-padding">
+            <!--<a href="02.html">-->
+                <!--<div class="box two">-->
+                    <!--<div class="twohover x-align-middle">-->
+                        <!--<div class="x-align-block text-padding">-->
 
-                        </div>
+                        <!--</div>-->
 
-                    </div>
+                    <!--</div>-->
 
-                </div> </a>
+                <!--</div> </a>-->
 
 
-            <a href="03.html">
-                <div class="box three">
+            <!--<a href="03.html">-->
+                <!--<div class="box three">-->
 
-                    <div class="threehover x-align-middle">
-                        <div class="x-align-block text-padding">
+                    <!--<div class="threehover x-align-middle">-->
+                        <!--<div class="x-align-block text-padding">-->
 
-                        </div>
+                        <!--</div>-->
 
-                    </div>
+                    <!--</div>-->
 
 
-                </div> </a>
+                <!--</div> </a>-->
 
 
-            <a href="04.html">
-                <div class="box four">
+            <!--<a href="04.html">-->
+                <!--<div class="box four">-->
 
-                    <div class="fourhover x-align-middle">
-                        <div class="x-align-block text-padding">
+                    <!--<div class="fourhover x-align-middle">-->
+                        <!--<div class="x-align-block text-padding">-->
 
-                        </div>
+                        <!--</div>-->
 
-                    </div>
+                    <!--</div>-->
 
 
-                </div> </a>
+                <!--</div> </a>-->
 
 
-            <a href="05.html">
-                <div class="box five">
+            <!--<a href="05.html">-->
+                <!--<div class="box five">-->
 
-                    <div class="fivehover x-align-middle">
-                        <div class="x-align-block text-padding">
+                    <!--<div class="fivehover x-align-middle">-->
+                        <!--<div class="x-align-block text-padding">-->
 
-                        </div>
+                        <!--</div>-->
 
 
-                    </div>
+                    <!--</div>-->
 
-                </div>
+                <!--</div>-->
 
 
-                <div class="box six">
+                <!--<div class="box six">-->
 
-                    <div class="eighthover x-align-middle">
-                        <div class="x-align-block text-padding">
+                    <!--<div class="eighthover x-align-middle">-->
+                        <!--<div class="x-align-block text-padding">-->
 
-                        </div>
+                        <!--</div>-->
 
-                    </div>
+                    <!--</div>-->
 
-                </div> </a>
+                <!--</div> </a>-->
 
 
 
 
 
-            <a href="06.html">
-                <div class="box seven">
+            <!--<a href="06.html">-->
+                <!--<div class="box seven">-->
 
-                    <div class="sevenhover x-align-middle">
-                        <div class="x-align-block text-padding">
+                    <!--<div class="sevenhover x-align-middle">-->
+                        <!--<div class="x-align-block text-padding">-->
 
-                        </div>
+                        <!--</div>-->
 
-                    </div>
+                    <!--</div>-->
 
-                </div> </a>
+                <!--</div> </a>-->
 
 
-            <a href="07.html">
-                <div class="box eight">
+            <!--<a href="07.html">-->
+                <!--<div class="box eight">-->
 
-                    <div class="eighthover x-align-middle">
-                        <div class="x-align-block text-padding">
+                    <!--<div class="eighthover x-align-middle">-->
+                        <!--<div class="x-align-block text-padding">-->
 
-                        </div>
+                        <!--</div>-->
 
-                    </div>
+                    <!--</div>-->
 
-                </div> </a>
+                <!--</div> </a>-->
 
-            <div class="box nine">
+            <!--<div class="box nine">-->
 
-                <div class="eighthover x-align-middle">
-                    <div class="x-align-block text-padding">
+                <!--<div class="eighthover x-align-middle">-->
+                    <!--<div class="x-align-block text-padding">-->
 
-                    </div>
+                    <!--</div>-->
 
-                </div>
+                <!--</div>-->
 
-            </div> </a>
+            <!--</div> </a>-->
 
-            <div class="box ten">
+            <!--<div class="box ten">-->
 
-                <div class="eighthover x-align-middle">
-                    <div class="x-align-block text-padding">
+                <!--<div class="eighthover x-align-middle">-->
+                    <!--<div class="x-align-block text-padding">-->
 
-                    </div>
+                    <!--</div>-->
 
-                </div>
+                <!--</div>-->
 
-            </div> </a>
+            <!--</div> </a>-->
 
 
 
 
 
-        </div>
+        <!--</div>-->
 
-    </section>
+    <!--</section>-->
 
 
-</div>
+<!--</div>-->
 
-</body>
+<!--</body>-->
 
 
-</html>
+<!--</html>-->
