--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <!DOCTYPE html>
 <html>
 
-<link rel="shortcut icon" href="images/symbol-01.png">
+<link rel="shortcut icon" href="images/symbol.png">
 <body bgcolor="white">
 <title>Hello! Dasom</title>
 <link rel=stylesheet href="style.css">
@@ -199,8 +199,8 @@
 
     <!--</header>-->
     <!--<section>-->
-            <div class="profile"><a href=“dasomyoon.pdf”><img src="images/resume.svg"><span class="profiletext3">VIEW PORTFOLIO</span><p></p></a></div>
-            <div class="container"><div id="img-resize"><img src="images/web.jpg"></div></div>
+            <div class="profile"> <a href="dasomyoon.pdf"> <img src="images/resume.svg"><span class="profiletext3">VIEW PORTFOLIO</span></a></div>
+            <div class="container"><div id="img-resize"><img src="images/web2.jpg"></div></div>
             <!--<a href="01.html">-->
                 <!--<div class="box one">-->
 
