--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
     <!--</header>-->
     <!--<section>-->
-            <div class="profile"> <a href="dasomyoon.pdf"> <img src="images/resume.svg"><span class="profiletext3">VIEW PORTFOLIO</span></a></div>
+            <p></p><div class="profile"> <a href="dasomyoon.pdf"> <img src="images/resume2.svg"><span class="profiletext3">VIEW PORTFOLIO</span></a></div>
             <div class="container"><div id="img-resize"><img src="images/web2.jpg"></div></div>
             <!--<a href="01.html">-->
                 <!--<div class="box one">-->
