--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <link rel="shortcut icon" href="images/symbol.png">
 <body bgcolor="white">
-<title>Hello! Dasom</title>
+<title>Spring Som</title>
 <link rel=stylesheet href="style.css">
 <!--<link rel=stylesheet href="reset.css">-->
 <head lang="en">
