--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <!DOCTYPE html>
 <html>
 
+
 <link rel="shortcut icon" href="images/symbol.png">
 <body bgcolor="white">
 <title>Spring Som</title>
@@ -11,28 +12,29 @@
 <!--<link rel=stylesheet href="reset.css">-->
 <head lang="en">
     <meta charset="UTF-8">
-
+    <meta http-equiv="refresh" content="0;url=http://dasomyoon.cafe24.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
+<body></body>
+
+</html>
+<!--<body>-->
+
+<!--<div class="x-com">-->
+    <!--<header class="major">-->
+        <!--<div class="major2 clearfix">-->
+            <!--<!--<div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>-->-->
+            <!--<div class="logo">-->
 
 
-<body>
+                <!--<a href="index.html"><img src="images/logo.svg"></a></div>-->
 
-<div class="x-com">
-    <header class="major">
-        <div class="major2 clearfix">
-            <!--<div class="menu"><a href="index.html"><img src="images/menu.svg"></a></div>-->
-            <div class="logo">
+            <!--<div class="profile"><a href="dasomyoon.pdf"> <img src="images/resume.svg"><span class="profiletext3">VIEW PORTFOLIO</span><p></p></a></div>-->
+        <!--</div>-->
 
+        <!--<div class="container"><div id="img-resize"><img src="images/web.jpg"></div></div>-->
 
-                <a href="index.html"><img src="images/logo.svg"></a></div>
-
-            <div class="profile"><a href="dasomyoon.pdf"> <img src="images/resume.svg"><span class="profiletext3">VIEW PORTFOLIO</span><p></p></a></div>
-        </div>
-
-        <div class="container"><div id="img-resize"><img src="images/web.jpg"></div></div>
-
-        </div>
+        <!--</div>-->
 
 
 
@@ -187,21 +189,21 @@
 <!--</div>-->
 
 
-<div class="x-mobile">
+<!--<div class="x-mobile">-->
 
-    <header class="major">
-        <div class="major2 clearfix">
-            <!--<div class="menu"><a href="index.html"><img src="images/menu2.svg"></a></div>-->
-            <div class="logo"><a href="index.html"><img src="images/logo2.svg"></a></div>
-            <!--<div class="profile"><a href="profile.html"><img src="images/profile2.svg"></a></div>-->
-        <!--</div>-->
+    <!--<header class="major">-->
+        <!--<div class="major2 clearfix">-->
+            <!--<!--<div class="menu"><a href="index.html"><img src="images/menu2.svg"></a></div>-->-->
+            <!--<div class="logo"><a href="index.html"><img src="images/logo2.svg"></a></div>-->
+            <!--<!--<div class="profile"><a href="profile.html"><img src="images/profile2.svg"></a></div>-->-->
+        <!--<!--</div>-->-->
 
 
-    <!--</header>-->
-    <!--<section>-->
-            <p></p><div class="profile"> <a href="dasomyoon.pdf"> <img src="images/resume2.svg"><span class="profiletext3">VIEW PORTFOLIO</span></a></div>
-            <div class="container"><div id="img-resize"><img src="images/web2.jpg"></div></div>
-            <!--<a href="01.html">-->
+    <!--<!--</header>-->-->
+    <!--<!--<section>-->-->
+            <!--<p></p><div class="profile"> <a href="dasomyoon.pdf"> <img src="images/resume2.svg"><span class="profiletext3">VIEW PORTFOLIO</span></a></div>-->
+            <!--<div class="container"><div id="img-resize"><img src="images/web2.jpg"></div></div>-->
+            <!--<!--<a href="01.html">-->-->
                 <!--<div class="box one">-->
 
                     <!--<div class="onehover x-align-middle">-->
